turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:35: error: type mismatch;
 found   : java.awt.Color
 required: Int
	state = rule(state)(couleurSol)(2);
                            ^