turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state: Int = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
	var taille: Int = rule.length;
	var position: Int = 0;
	var couleurSol: Color = getCouleurSol();

	for(i <- 0 to taille -1){
		if(colors(i) == couleurSol){
			position = i;
		}
	}
		
	setCouleurSol(colors(1));	
	

	if(rule(state)(position)(1) == 0){
	}
	else if(rule(state)(position)(1) == 1) {
		avance();
	}
	else if(rule(state)(position)(1) == 2) {
		gauche();
		avance();
	}
	else if(rule(state)(position)(1) == 4) {
		retourne();
		avance();
	}
	else{
		droite();
		avance();
	}
	state = rule(state)(couleurSol)(2);
}

def setCouleurSol(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
}

